kubernetes/base/fast-reverse-proxy/bases/operator-usage/resources/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-gateway
  labels:
    project: fast-reverse-proxy
    component: nginx-gateway
spec:
  selector:
    matchLabels:
      project: fast-reverse-proxy
      component: nginx-gateway
  replicas: 1
  template:
    metadata:
      labels:
        project: fast-reverse-proxy
        component: nginx-gateway
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
