kubernetes/base/fast-reverse-proxy/bases/operator-usage/resources/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway
  labels:
    project: fast-reverse-proxy
    component: nginx-gateway
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    project: fast-reverse-proxy
    component: nginx-gateway
