kubernetes/base/fast-reverse-proxy/bases/operator-usage/resources/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-gateway
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-production-http01
spec:
  ingressClassName: nginx
  rules:
  - host: frp.k8s.funkyboy.zone
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-gateway
            port:
              number: 80
  tls:
  - hosts:
    - frp.k8s.funkyboy.zone
    secretName: fast-reverse-proxy-nginx-gateway-ingress-cert
